css/input.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* Your custom styles here */
html {
    scroll-behavior: smooth;
    scroll-padding-top: 50px; /* Adjusts scroll position to account for fixed header */
}
body {
    font-family: 'Montserrat', sans-serif;
    scroll-behavior: smooth;
}

/* Glassmorphism effect */
.glass {
    background: rgba(255, 255, 255, 0.2); /* Semi-transparent background */
    backdrop-filter: blur(10px); /* Blur effect */
    border-radius: 15px; /* Rounded corners */
    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1); /* Soft shadow */
}

/* Updated button styles */
.cta-button {
    background: linear-gradient(90deg, #ff7e5f, #feb47b); /* Gradient background */
    border: none;
    border-radius: 30px; /* Rounded button */
    padding: 12px 24px; /* Padding */
    font-size: 16px; /* Font size */
    transition: transform 0.3s, background 0.3s; /* Transition effects */
}

.cta-button.bg-white {
    background: #ffffff;
}

.cta-button:hover {
    transform: scale(1.05); /* Scale effect on hover */
    background: linear-gradient(90deg, #feb47b, #ff7e5f); /* Reverse gradient on hover */
}

.cta-button.bg-white {
    background: #ffffff;
}

/* Updated text colors */
body {
    color: #333; /* Darker text for better readability */
}

.swiper-container {
    overflow: hidden;
}
.swiper-slide {
    transition: transform 0.3s, filter 0.3s;
}

.swiper-button-next::after,
.swiper-button-prev::after {
    background: linear-gradient(90deg, #ff7e5f, #feb47b);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    color: transparent; /* Make sure the original color doesn't show */
    font-weight: bold; /* Enhance visibility */
    transition: transform 0.3s ease-in-out;
}
.swiper-button-next:hover::after,
.swiper-button-prev:hover::after {
    transform: scale(1.2); /* Optional scaling effect */
}

.swiper-pagination-bullet-active {
    background: linear-gradient(90deg, #feb47b, #ff7e5f); /* Reverse gradient for active state */
}
.swiper-wrapper {
    -webkit-transition-timing-function:linear!important; 
    -o-transition-timing-function:linear!important;
    transition-timing-function:linear!important; 
}

